--- a/package.json
+++ b/package.json
@@ -145,6 +145,7 @@
     "cordova-plugin-globalization": "1.0.9",
     "cordova-plugin-inappbrowser": "3.1.0",
     "cordova-plugin-ionic-keyboard": "2.1.3",
+    "cordova-plugin-navigationbar-color": "0.0.9",
     "cordova-plugin-qrscanner": "3.0.1",
     "cordova-plugin-screen-orientation": "3.0.2",
     "cordova-plugin-spinner-dialog": "1.3.1",
