Wyre integration first commit

--- a/app-template/copay/appConfig.json
+++ b/app-template/copay/appConfig.json
@@ -28,11 +28,11 @@
   "androidVersion": "91000008",
   "_extraCSS": null,
   "_enabledExtensions": {
+    "buycrypto": false,
     "coinbase": false,
     "glidera": false,
     "debitcard": false,
     "shapeshift": false,
-    "simplex": false,
     "giftcards": false
   }
 }
